--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,10 +3,20 @@
 
 @tailwind components;
 
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
-  margin: 0;
-  @apply font-sans;
-  overflow: hidden;
+  @apply m-0 font-sans bg-gray-300 overflow-hidden;
+}
+table {
+  @apply bg-gray-100;
 }
 
 /* purgecss end ignore */
