--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,6 +25,9 @@ button:hover {
 button:active {
   @apply bg-gray-900 shadow-lg;
 }
+button:disabled {
+  @apply opacity-50 cursor-not-allowed;
+}
 
 @import '~@reach/menu-button/styles.css';
 [data-reach-menu-list],
