--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 html {
+  font-size: 18px;
   box-sizing: border-box;
 }
 *,
@@ -7,29 +8,7 @@ html {
   box-sizing: inherit;
 }
 body {
-  @apply m-0 font-sans bg-gray-800 text-teal-200 overflow-hidden;
-}
-a {
-  @apply text-teal-300;
-}
-a:visited {
-  @apply text-teal-400;
-}
-button {
-  @apply cursor-pointer shadow-md py-1 px-2 bg-gray-700 text-teal-200 border-solid border-gray-900 border-opacity-50 rounded-sm;
-  border-width: 1px;
-}
-button:hover {
-  @apply bg-gray-800 shadow-lg;
-}
-button:active {
-  @apply bg-gray-900 shadow-lg;
-}
-button:disabled {
-  @apply opacity-50 cursor-not-allowed;
-}
-input {
-  @apply text-lg p-1;
+  @apply m-0 overflow-hidden;
 }
 
 @import '~@reach/menu-button/styles.css';
