--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 html {
+  font-size: 18px;
   box-sizing: border-box;
 }
 *,
@@ -18,6 +19,7 @@ a:visited {
 button {
   @apply outline-none cursor-pointer shadow-md py-1 px-4 bg-gray-700 text-teal-200 border-solid border-teal-200 border-opacity-25 rounded-sm;
   border-width: 1px;
+  font-size: 0.84rem;
 }
 button:hover {
   @apply bg-gray-800 shadow-lg text-teal-100;
