add running balance to transaction query WIP

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.xz.style/serve/inter.css');
-@import url('https://fonts.xz.style/serve/liberation-mono.css');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 html {
   box-sizing: border-box;
